--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ body, html {
   width: 100%;
   text-align: center;
   color: #000;
-  font-size: 400%;
+  font-size: 500%;
   letter-spacing: 0px;
   font: "Voltaire", voltaire;
 }
@@ -44,22 +44,22 @@ body, html {
 .caption-2 {
   position: absolute;
   left: 50;
-  top: 65%;
+  top: 50%;
   width: 100%;
   text-align: center;
   color: #fff;
-  font-size: 250%;
+  font-size: 350%;
   letter-spacing: 10px;
 }
 
 .caption-3 {
   position: absolute;
   left: 0;
-  top: 42%;
+  top: 24%;
   width: 100%;
   text-align: center;
   color: #000;
-  font-size: 300%;
+  font-size: 500%;
   letter-spacing: 30px;
 }
 
@@ -82,15 +82,15 @@ body, html {
 }
 
 .fader1 {
-    animation: fadeEffect 4s; /* fading effect in seconds */
+    animation: fadeEffect 6s; /* fading effect in seconds */
  }
  
  .fader2 {
-    animation: fadeEffect 5s;
+    animation: fadeEffect 6s;
  }
 
  .fader3 {
-    animation: fadeEffect 5s;
+    animation: fadeEffect 6s;
  }
 
  @keyframes fadeEffect { /* from 0 to full opacity */
@@ -102,42 +102,46 @@ body, html {
 /------For phones---------/
 /------------------------*/
 
+/* @media only screen and (max-width:000px) ,  screen and (max-height: 000px) */
 @media screen and (max-width: 768px) {
 
-.caption-1 {
-    font-size: 300%;
-    margin-left: 0px;
-    text-align: center;
-}
-.caption-2 {
-    font-size: 200%;
-    margin-left: 0px;
-    top: 270px;
-    text-align: center;
-}
-.caption-3 {
-    font-size: 200%;
-    margin-left: 0px;
-    top: 200px;
-    text-align: center;
-}
+    .caption-1 {
+        position: absolute;
+        left: 0;
+        top: 15%;
+        width: 100%;
+        text-align: center;
+        color: #000;
+        font-size: 400%;
+        letter-spacing: 0px;
+        font: "Voltaire", voltaire;
+      }
+      
+      .caption-2 {
+        position: absolute;
+        left: 50;
+        top: 30%;
+        width: 100%;
+        text-align: center;
+        color: #fff;
+        font-size: 200%;
+        letter-spacing: 10px;
+      }
+      
+      .caption-3 {
+        position: absolute;
+        left: 0;
+        top: 32%;
+        width: 105%;
+        text-align: center;
+        color: #000;
+        font-size: 300%;
+        letter-spacing: 30px;
+      }
 
-.fader1 {
-    animation: fadeEffect 0s; /* fading effect in seconds */
- }
- 
- .fader2 {
-    animation: fadeEffect 0s;
- }
-
- .fader3 {
-    animation: fadeEffect 0s;
- }
-
- @keyframes fadeEffect { /* from 0 to full opacity*/
-    from {opacity: 0;}
-    to {opacity: 1;}
- }
-
+      @keyframes fadeEffect { /* from 0 to full opacity */
+        from {opacity: 1;}
+        to {opacity: 1;}
+     }
 
 }
