--- a/css/peacemakr.css
+++ b/css/peacemakr.css
@@ -71,7 +71,7 @@ ul {
 
 .peacemakr_hover:hover {
   color: #f9dfa5;
-  transition-duration: 1s;
+  transition-duration: .2s;
   transition-timing-function: linear;
 }
 .peacemakr_light_navlink:link, .peacemakr_light_navlink:visited, .peacemakr_light_navlink:active {
@@ -83,7 +83,7 @@ a:link, a:visited, a:active {
 }
 a:hover {
   color: #828282;
-  transition-duration: 1s;
+  transition-duration: .2s;
   transition-timing-function: linear;
 }
 
@@ -104,7 +104,7 @@ input:hover[type="submit"]
 {
 	background: #323232;
 	color: #f9dfa5;
-	transition-duration: 1s;
+	transition-duration: .2s;
   	transition-timing-function: linear;
 }
 
